src/objects/Attendee__c.object
<CustomObject>
    <description>Child records of Contacts to match attendance of events.</description>
    <fields>
        <fullName>AttendeeID__c</fullName>
        <description>The Evemttia ID of the attendee.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Evemttia ID of the attendee.</inlineHelpText>
        <label>Attendee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendeeType__c</fullName>
        <description>The attendee type as registered in Eventtia.</description>
        <inlineHelpText>The attendee type as registered in Eventtia.</inlineHelpText>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Supplier</fullName>
                </value>
                <value>
                    <fullName>Foreign Buyer</fullName>
                </value>
                <value>
                    <fullName>Trade Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Affiliation__c</fullName>
        <description>Attendee type based on the email entered in Eventtia</description>
        <formula>IF(CONTAINS( Email__c , &quot;.gov&quot;), &quot;Government&quot;, &quot;Non - Government&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Attendee type based on the email entered in Eventtia</inlineHelpText>
        <label>Attendee Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessConference__c</fullName>
        <description>Establishes master- detail relationship between attendee and business conference.</description>
        <inlineHelpText>Establishes master- detail relationship between attendee and business conference.</inlineHelpText>
        <label>Business Conference</label>
        <referenceTo>Business_Conference__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>The Company of the attendee.</description>
        <inlineHelpText>The Company of the attendee.</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact record of this Attendee.</description>
        <inlineHelpText>The Contact record of this Attendee.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email address of the attendee.</description>
        <inlineHelpText>The email address of the attendee.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>The first name of the attendee.</description>
        <inlineHelpText>The first name of the attendee.</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>The last name of the attendee.</description>
        <inlineHelpText>The last name of the attendee.</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <description>Attendee&apos;s city.</description>
        <inlineHelpText>Attendee&apos;s city.</inlineHelpText>
        <label>MailingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <description>Attendee&apos;s country.</description>
        <inlineHelpText>Attendee&apos;s country.</inlineHelpText>
        <label>MailingCountry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <description>Attendee&apos;s postal code.</description>
        <inlineHelpText>Attendee&apos;s postal code.</inlineHelpText>
        <label>MailingPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <description>Attendee&apos;s resident state.</description>
        <inlineHelpText>Attendee&apos;s resident state.</inlineHelpText>
        <label>MailingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <description>Attendee&apos;s street.</description>
        <inlineHelpText>Attendee&apos;s street.</inlineHelpText>
        <label>MailingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParticipantID__c</fullName>
        <description>The Eventtia ID of the participant.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Eventtia ID of the participant.</inlineHelpText>
        <label>Participant ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>The telephone number of the attendee.</description>
        <inlineHelpText>The telephone number of the attendee.</inlineHelpText>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Job title of the Attendee.</description>
        <inlineHelpText>Job title of the Attendee.</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Link to Attendee&apos;s website.</description>
        <inlineHelpText>Link to Attendee&apos;s website.</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>Attendee_Affiliation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Attendees</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Email__c</columns>
        <columns>BusinessConference__c</columns>
        <columns>Company__c</columns>
        <columns>Attendee_Affiliation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Attendees</label>
    </listViews>
    <nameField>
        <displayFormat>Att-{0000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>